5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1795_1600.log
== TEST (2019-05-30 16:14:13) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=15/100
while(i<size(v)):
	if(v[i]>80):
		v=sum(v)*a
	i=i+1	
print(round(v, 2))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:28) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=15/100
while(i<size(v)):
	if(v[i]>80):
		v=sum(v)*a
	i=i+1	
print(round(v,2))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:32) 
-- CODE:
from numpy import*
v=float(input("custo: "))
i=0
a=15/100
while(i<size(v)):
	if(v[i]>80):
		v=sum(v)*a
	i=i+1
	else:
		v=sum(v)-1
print(round(v, 2))	
		
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:47) 
-- CODE:
from numpy import*
v=float(input("custo: "))
i=0
a=15/100
while(i<size(v)):
	if(v[i]>80):
		v=sum(v)*a
	i=i+1
print(round(v, 2))	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:53) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=15/100
while(i<size(v)):
	if(v[i]>80):
		v=sum(v)+a
	else:
		v=sum(v)
		
		
print(round(v, 2))	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:30) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=15/100
while(i<size(v)):
	if(v[i]<80):
		v=sum(v)
	else:
		v=sum(v)*a
		
		
print(round(v, 2))	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:57) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=15/100
while(i<size(v)):
	if(v[i]<80):
		v=sum(v)
	else:
		v=sum(v)*a
	i=i+1	
		
print(round(v, 2))	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:40:27) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=15/100
while(i<size(v)):
	if(v[i]>80):
		v=sum(v)
	else:
		v=sum(v)*a
	i=i+1	
		
print(round(v, 2))	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:40:49) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=15/100
while(i<size(v)):
	if(v[i]>80):
		v=sum(v)
	else:
		v=sum(v)+a
	i=i+1	
		
print(round(v, 2))	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:24) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=0
b=0
while(i<size(v)):
	if(v[i]>80):
		v=v+a[i]*(15/100)
	else:
		b=b+a[i]
p=v+b
print(round(p, 2))	
		
	i=i+1	
		
print(round(v, 2))	
		
-- ERROR:
File "XXXX", line 14
    i=i+1	
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:41) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=0
b=0
while(i<size(v)):
	if(v[i]>80):
		v=v+a[i]*(15/100)
	else:
		b=b+a[i]
p=v+b
print(round(p, 2))	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:13) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=0
b=0
while(i<size(v)):
	if(v[i]>80):
		v=a[i]*(15/100)
	else:
		b=b+a[i]
p=v+b
print(round(p, 2))	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:54) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=0
b=0
while(i<size(v)):
	if(v[i]>80):
		v=v*(15/100)
	else:
		b=b+a[i]
p=v+b
print(round(p, 2))	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:22) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=0
b=0
while(i<size(v)):
	if(v[i]>80):
		v=v+a[i]*(15/100)
	else:
		v=v+a[i]
p=v+b
print(round(p, 2))	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:50) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=0
b=0
while(i<size(v)):
	if(v[i]>80):
		v=a[i]*(15/100)
	else:
		v=v+a[i]
p=v+b
print(round(p, 2))	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:25) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=0
b=0
while(i<size(v)):
	if(v[i]>80):
		v=v+a[i]*(15/100)
	else:
		v=v+a[i]
	i=i+1	
p=v+b
print(round(p, 2))	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:26) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=0
b=0
while(i<size(v)):
	if(v[i]>80):
		v=v+a[i]*(15/100)
	else:
		v=v+b[i]
	i=i+1	
p=v+b
print(round(p, 2))	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:38) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=0
b=0
while(i<size(v)):
	if(v[i]>80):
		v=v+a[i]*(15/100)
	else:
		v=v+b
	i=i+1	
p=v+b
print(round(p, 2))	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:54:08) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=0
b=0
while(i<size(v)):
	if(v[i]>80):
		v=v+a[i]*(15/100)
	else:
		b=b+a[i]
	i=i+1	
p=v+b
print(round(p, 2))	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:54:55) 
-- CODE:
from numpy import*
v=array(eval(input("custo: ")))
i=0
a=0
b=0
while(i<size(v)):
	if(v[i]>80):
		v=v+(a[i])*(15/100)
	else:
		b=b+(a[i])
	i=i+1	
p=v+b
print(round(p, 2))	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
